# CNStream

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGES  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Dockerfile.16.04  Dockerfile.18.04  Dockerfile.CentOS  LICENSE  README.md
apps/: CMakeLists.txt
apps/cmake/: settings.cmake
apps/dehaze/: CMakeLists.txt  README.md  dehaze_demo.cpp  env.sh  run.sh  util.hpp
apps/face_recognition/: CMakeLists.txt  env.sh  face_recognition.cpp  face_recognition.json  faces_lib.json  inference_ex.cpp  inference_ex.hpp  label_voc.txt  mtcnn_process.cpp  mtcnn_process.hpp  run.sh
apps/faceswap/: .gitignore  convert.py  env.sh  faceswap_config.json  requirements.txt  run.sh
apps/modules/: CMakeLists.txt
apps/pose_estimate/: CMakeLists.txt  README.md  env.sh  openpose_config_mlu100.json  pose_estimate.cpp  pose_postproc.cpp  pose_preproc.cpp  pose_utils.cpp  pose_utils.hpp  run_mlu100.sh
apps/step_structure/: CMakeLists.txt  car_model_label_list.txt  cnosd.cpp  cnosd.h  env.sh  multistep_classifier.cpp  multistep_classifier.hpp  multistep_classifier_impl.cpp  multistep_classifier_impl.hpp  multistep_osd.cpp  multistep_osd.hpp  run.sh  second_structure.cpp  second_structure_config.json
apps/style_transfer/: CMakeLists.txt  env.sh  run_style.sh  style_config.json  util.cpp
apps/super_resolution/: CMakeLists.txt  SRdemo.cpp  SuperResolution.json  env.sh  runSR.sh  util.cpp
apps/web/: CMakeLists.txt  README.md  SuperResolution.json  dehaze_config.json  detection.cpp  detection_config.json  object_detector_sever.py  pre_required_helper.sh  run.sh  style_config.json  web.conf
easydk/: CMakeLists.txt  LICENSE  README.md
easydk/cmake/: FindASan.cmake  FindGlog.cmake  FindMSan.cmake
easydk/tests/: CMakeLists.txt
framework/: CMakeLists.txt
framework/include/: cnstream_collection.hpp  cnstream_common.hpp  cnstream_config.hpp  cnstream_core.hpp  cnstream_eventbus.hpp  cnstream_frame.hpp  cnstream_logging.hpp  cnstream_module.hpp  cnstream_pipeline.hpp  cnstream_source.hpp  cnstream_version.hpp
framework/src/: cnstream_allocator.cpp  cnstream_collection.cpp  cnstream_config.cpp  cnstream_eventbus.cpp  cnstream_frame.cpp  cnstream_graph.cpp  cnstream_graph.hpp  cnstream_module.cpp  cnstream_pipeline.cpp  cnstream_source.cpp  connector.cpp  connector.hpp  conveyor.cpp  conveyor.hpp
framework/unitest/: CMakeLists.txt  main.cpp  test_base.cpp  test_cnversion.cpp  test_collection.cpp  test_config.cpp  test_conveyor.cpp  test_eventbus.cpp  test_graph.cpp  test_main.cpp  test_module.cpp  test_module_profiler.cpp  test_param.cpp  test_pipeline.cpp  test_pipeline_data_flow.cpp  test_pipeline_profiler.cpp  test_pipeline_tracer.cpp  test_process_profiler.cpp  test_stream_profiler.cpp  test_threadsafe_queue.cpp  test_trace_serialize_helper.cpp
modules/: CMakeLists.txt  cnstream_frame_va.cpp  cnstream_frame_va.hpp  cnstream_postproc.cpp  cnstream_postproc.hpp  cnstream_preproc.cpp  cnstream_preproc.hpp  cnstream_syncmem.cpp  cnstream_syncmem.hpp
modules/core/: CMakeLists.txt
modules/decode/: CMakeLists.txt
modules/discard_frame/: CMakeLists.txt
modules/display/: CMakeLists.txt
modules/encode/: CMakeLists.txt
modules/fps_stats/: CMakeLists.txt
modules/inference/: CMakeLists.txt  README.md
modules/inference2/: README.md
modules/osd/: CMakeLists.txt
modules/source/: CMakeLists.txt
modules/track/: CMakeLists.txt
modules/unitest/: CMakeLists.txt  test_base.cpp  test_frame.cpp  test_main.cpp
modules_contrib/: CMakeLists.txt
python/: CMakeLists.txt  README.md  requirements.txt  setup.py
python/demo/: pycnstream_demo.py
python/samples/: README.md  observer.py  pycnstream_demo.py  python_demo_config.json  python_demo_config_mlu370.json  utils.py  yolov3_detection_config.json  yolov3_detector.py  yolov5_detection_config.json  yolov5_detector.py
python/src/: cnstream_config_py_wrapper.cpp  cnstream_frame_py_wrapper.cpp  cnstream_frame_va_py_wrapper.cpp  cnstream_module_py_wrapper.cpp  cnstream_pipeline_py_wrapper.cpp  cnstream_postproc_py_wrapper.cpp  cnstream_preproc_py_wrapper.cpp  cnstream_profile_py_wrapper.cpp  cnstream_py_wrapper.cpp  cnstream_source_module_py_wrapper.cpp  cnstream_syncmem_py_wrapper.cpp  cnstream_video_postproc_py_wrapper.cpp  cnstream_video_preproc_py_wrapper.cpp  common_wrapper.cpp  common_wrapper.hpp  data_source_py_wrapper.cpp  pymodule.h  pypostproc.h  pypreproc.h  pyvideopostproc.h  pyvideopreproc.h
python/test/: __init__.py  config_test.py  cpp_call_py_testfunc.cpp  cpp_data_handler_test.cpp  cpp_frame_test.cpp  cpp_frame_va_test.cpp  cpp_postproc_test.cpp  cpp_preproc_test.cpp  cpp_videopostproc_test.cpp  cpp_videopreproc_test.cpp  data_handler_test.py  frame_test.py  frame_va_test.py  module_test.py  pipeline_test.py  postproc_test.py  preproc_test.py  run_pytest.sh  source_module_test.py  videopostproc_test.py  videopreproc_test.py
samples/cns_launcher/: CMakeLists.txt  README.md  cns_launcher.cpp
samples/demo/: CMakeLists.txt  classification_resnet18_mlu220_config.json  classification_resnet50_mlu270_config.json  demo.cpp  detection.cpp  detection_config.json  detection_config_rtsp.json  detection_config_rtsp_mosaicwin.json  env.sh  files.list_video  generate_images_list.sh  resnet50_config_cnencode.json  resnet50_config_mlu270.json  run.sh  run_resnet18_mlu220.sh  run_resnet50_cnencode.sh  run_resnet50_mlu270.sh  run_rtsp.sh  run_rtsp_mosaicwin.sh  run_ssd_and_resnet50_mlu270.sh  ssd_resnet34_and_resnet50_mlu270_config.json  util.cpp  util.hpp
samples/detection-demo/: CMakeLists.txt  detection.cpp  detection_config.json  env.sh  run.sh
samples/example/: CMakeLists.txt  blockingconcurrentqueue.h  concurrentqueue.h  example.cpp  module_complex.hpp  module_simple.hpp
tools/: CMakeLists.txt  CPPLINT.cfg  build_ffmpeg.sh  build_libyuv.sh  build_live555.sh  copy_neuware_mlu100.sh  copy_neuware_mlu270.sh  cpp_lint.py  download_live.sh  generate_file_list.sh  get_model_info.sh  libyuv-1766.patch  lintgit  parse_perf_data.py  pre_required_helper.sh
(+1126 files in other folders)
